--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -54,7 +54,8 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        rust: [stable, beta]
+        # bump this when bumping the MSRV
+        rust: ["1.85.0", stable, beta]
     steps:
     - uses: actions/checkout@v4
 
