--- a/svix-cli/Cargo.toml
+++ b/svix-cli/Cargo.toml
@@ -10,6 +10,8 @@ keywords = ["svix", "webhooks", "diahook"]
 categories = ["development-tools", "asynchronous", "network-programming", "web-programming"]
 repository = "https://github.com/svix/svix-webhooks"
 publish = false
+# update .github/workflows/cli-lint.yml when changing this
+rust-version = "1.85"
 
 [package.metadata.dist]
 dist = true
