Support multiple input files in codegen.toml

--- a/codegen/codegen.toml
+++ b/codegen/codegen.toml
@@ -1,5 +1,5 @@
 [global]
-openapi = "lib-openapi.json"
+input_files = ["lib-openapi.json"]
 
 [rust]
 extra_mounts = { "rust/.rustfmt.toml" = "/app/.rustfmt.toml" }
