bridge: Add support for sending headers to http output

--- a/bridge/svix-bridge.example.receivers.yaml
+++ b/bridge/svix-bridge.example.receivers.yaml
@@ -154,3 +154,5 @@ receivers:
     output:
       type: "http"
       url: "http://example.local"
+      headers:
+        x-custom-header: "custom header value"
