bridge: Sync version across crates

--- a/bridge/svix-bridge/Cargo.toml
+++ b/bridge/svix-bridge/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "svix-bridge"
-version = "1.71.0"
+version.workspace = true
 edition = "2021"
 rust-version = "1.85"
 publish = false
