--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -35,7 +35,7 @@ http-body-util = "0.1.0"
 hyper = "1.1.0"
 hyper-rustls = { version = "0.26.0", optional = true }
 hyper-tls = { version = "0.6.0", optional = true }
-hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "tokio"] }
+hyper-util = { version = "0.1.16", features = ["client", "client-legacy", "tokio"] }
 itertools = "0.14.0"
 js_option = "0.1.1"
 percent-encoding = "2.3.1"
@@ -46,6 +46,8 @@ serde_repr = "0.1"
 thiserror = "2.0.11"
 time = "0.3"
 tokio = { version = "1.41.0", features = ["time"] }
+tower-service = "0.3.3"
+tracing = { version = "0.1.41", default-features = false }
 url = "2.2"
 uuid = { version = "1", features = ["v4"] }
 
