--- a/deny.toml
+++ b/deny.toml
@@ -27,6 +27,7 @@ allow = [
     "CDLA-Permissive-2.0",
     "ISC",
     "MIT",
+    "MIT-0", # MIT No Attribution
     "MPL-2.0",
     "OpenSSL",
     "Unicode-3.0",
