--- a/bridge/testing-docker-compose.yml
+++ b/bridge/testing-docker-compose.yml
@@ -28,7 +28,7 @@ services:
     ]
 
   kafka:
-    image: "docker.io/bitnami/kafka:3.5.1"
+    image: "ghcr.io/svix-mman/bitnami-kafka:3.5.1"
     ports:
       - "9092:9092"
       - "9094:9094"
