--- a/server/testing-docker-compose.yml
+++ b/server/testing-docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   # Redis cluster
   redis-cluster:
-    image: "docker.io/bitnami/redis-cluster:7.0.10"
+    image: "ghcr.io/svix-mman/docker.io/bitnami/redis-cluster:7.0.10"
     environment:
       ALLOW_EMPTY_PASSWORD: "yes"
       REDIS_NODES: "redis-cluster redis-cluster-node-0 redis-cluster-node-1 redis-cluster-node-2 redis-cluster-node-3 redis-cluster-node-4"
@@ -33,7 +33,7 @@ services:
       - redis-cluster-node-4
 
   redis-cluster-node-0:
-    image: "docker.io/bitnami/redis-cluster:7.0.10"
+    image: "ghcr.io/svix-mman/docker.io/bitnami/redis-cluster:7.0.10"
     ports:
       - "6381:6379"
     environment:
@@ -41,7 +41,7 @@ services:
       REDIS_NODES: "redis-cluster redis-cluster-node-0 redis-cluster-node-1 redis-cluster-node-2 redis-cluster-node-3 redis-cluster-node-4"
 
   redis-cluster-node-1:
-    image: "docker.io/bitnami/redis-cluster:7.0.10"
+    image: "ghcr.io/svix-mman/docker.io/bitnami/redis-cluster:7.0.10"
     ports:
       - "6382:6379"
     environment:
@@ -49,7 +49,7 @@ services:
       REDIS_NODES: "redis-cluster redis-cluster-node-0 redis-cluster-node-1 redis-cluster-node-2 redis-cluster-node-3 redis-cluster-node-4"
 
   redis-cluster-node-2:
-    image: "docker.io/bitnami/redis-cluster:7.0.10"
+    image: "ghcr.io/svix-mman/docker.io/bitnami/redis-cluster:7.0.10"
     ports:
       - "6383:6379"
     environment:
@@ -57,7 +57,7 @@ services:
       REDIS_NODES: "redis-cluster redis-cluster-node-0 redis-cluster-node-1 redis-cluster-node-2 redis-cluster-node-3 redis-cluster-node-4"
 
   redis-cluster-node-3:
-    image: "docker.io/bitnami/redis-cluster:7.0.10"
+    image: "ghcr.io/svix-mman/docker.io/bitnami/redis-cluster:7.0.10"
     ports:
       - "6384:6379"
     environment:
@@ -65,7 +65,7 @@ services:
       REDIS_NODES: "redis-cluster redis-cluster-node-0 redis-cluster-node-1 redis-cluster-node-2 redis-cluster-node-3 redis-cluster-node-4"
 
   redis-cluster-node-4:
-    image: "docker.io/bitnami/redis-cluster:7.0.10"
+    image: "ghcr.io/svix-mman/docker.io/bitnami/redis-cluster:7.0.10"
     ports:
       - "6385:6379"
     environment:
