--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -6,7 +6,7 @@ on:
       - "go/**"
       - "go.sum"
       - "go.mod"
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
       - ".github/workflows/go-ci.yml"
   push:
     branches:
@@ -15,7 +15,7 @@ on:
       - "go/**"
       - "go.sum"
       - "go.mod"
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
       - ".github/workflows/go-ci.yml"
 
 jobs:
