--- a/.github/workflows/java-lint.yml
+++ b/.github/workflows/java-lint.yml
@@ -3,13 +3,13 @@ on:
   pull_request:
     paths:
       - "java/**"
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
   push:
     branches:
       - main
     paths:
       - "java/**"
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
 
 jobs:
   dotnet:
