--- a/.github/workflows/rust-lint.yml
+++ b/.github/workflows/rust-lint.yml
@@ -7,12 +7,12 @@ on:
     paths:
       - 'rust/**'
       - '.github/workflows/rust-lint.yml'
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
   pull_request:
     paths:
       - 'rust/**'
       - '.github/workflows/rust-lint.yml'
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
 
 # When pushing to a PR, cancel any jobs still running for the previous head commit of the PR
 concurrency:
