--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -5,7 +5,7 @@ on:
       - "go/**"
       - "go.sum"
       - "go.mod"
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
   push:
     branches:
       - main
@@ -13,7 +13,7 @@ on:
       - "go/**"
       - "go.sum"
       - "go.mod"
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
 
 jobs:
   build:
