--- a/.github/workflows/kotlin-lint.yml
+++ b/.github/workflows/kotlin-lint.yml
@@ -4,14 +4,14 @@ on:
   pull_request:
     paths:
       - "kotlin/**"
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
       - '.github/workflows/kotlin-lint.yml'
   push:
     branches:
       - main
     paths:
       - "javascript/**"
-      - "lib-openapi.json"
+      - "codegen/lib-openapi.json"
       - '.github/workflows/javascript-lint.yml'
 
 jobs:
