--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -40,11 +40,7 @@ http-body-util = "0.1.0"
 hyper = "1.7.0"
 hyper-rustls = { version = "0.27.7", optional = true }
 hyper-tls = { version = "0.6.0", optional = true }
-hyper-util = { version = "0.1.16", features = [
-    "client",
-    "client-legacy",
-    "tokio",
-] }
+hyper-util = { version = "0.1.16", features = ["client", "client-legacy", "tokio"] }
 itertools = "0.14.0"
 js_option = "0.1.1"
 percent-encoding = "2.3.1"
