--- a/javascript/package.json
+++ b/javascript/package.json
@@ -24,9 +24,9 @@
     "test": "jest",
     "prepublishOnly": "yarn lint",
     "lint:eslint": "eslint src",
-    "lint:prettier": "prettier src",
-    "lint": "yarn run lint:prettier --check && yarn run lint:eslint --max-warnings=0",
-    "lint:fix": "yarn run lint:eslint --fix && yarn run lint:prettier --write"
+    "fmt": "biome format --write",
+    "lint": "biome format && yarn run lint:eslint --max-warnings=0",
+    "lint:fix": "yarn run lint:eslint --fix && yarn run fmt"
   },
   "dependencies": {
     "@stablelib/base64": "^1.0.0",
@@ -37,6 +37,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.4",
     "@eslint/js": "^9.20.0",
     "@stablelib/utf8": "^2.0.0",
     "@types/jest": "^29.5.13",
@@ -46,7 +47,6 @@
     "globals": "^15.15.0",
     "jest": "^29.7.0",
     "mockttp": "^3.15.5",
-    "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "typescript": "^4.0",
     "typescript-eslint": "^8.24.0"
