--- a/javascript/package.json
+++ b/javascript/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "tsc",
     "prepare": "yarn run build",
-    "test": "jest",
+    "test": "tsc -p tsconfig.test.json && node --enable-source-maps test_build/src/index.test.js",
     "prepublishOnly": "yarn lint",
     "lint:eslint": "eslint src",
     "fmt": "biome format --write",
@@ -40,14 +40,11 @@
     "@biomejs/biome": "2.2.4",
     "@eslint/js": "^9.20.0",
     "@stablelib/utf8": "^2.0.0",
-    "@types/jest": "^29.5.13",
     "@types/url-parse": "1.4.11",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.20.1",
     "globals": "^15.15.0",
-    "jest": "^29.7.0",
     "mockttp": "^3.15.5",
-    "ts-jest": "^29.2.5",
     "typescript": "^4.0",
     "typescript-eslint": "^8.24.0"
   }
