--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -28,7 +28,7 @@ default = ["http1", "rustls-tls"]
 http1 = ["hyper-util/http1", "hyper-rustls?/http1"]
 http2 = ["hyper-util/http2", "hyper-rustls?/http2"]
 native-tls = ["dep:hyper-tls"]
-rustls-tls = ["dep:hyper-rustls", "hyper-rustls?/rustls-native-certs"]
+rustls-tls = ["dep:hyper-rustls", "dep:rustls", "hyper-rustls?/rustls-native-certs"]
 svix_beta = []
 
 [dependencies]
@@ -45,6 +45,7 @@ itertools = "0.14.0"
 js_option = "0.1.1"
 percent-encoding = "2.3.1"
 rand = "0.9.0"
+rustls = { version = "0.23.31", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
