--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,7 +9,12 @@ repository = "https://github.com/svix/svix-webhooks"
 readme = "../README.md"
 license = "MIT"
 keywords = ["svix", "webhooks", "diahook"]
-categories = ["development-tools", "asynchronous", "network-programming", "web-programming"]
+categories = [
+    "development-tools",
+    "asynchronous",
+    "network-programming",
+    "web-programming",
+]
 include = ["src/**/*", "README.md"]
 # bump .github/workflows/rust-link.yml when changing this
 rust-version = "1.85"
@@ -23,7 +28,7 @@ default = ["http1", "rustls-tls"]
 http1 = ["hyper-util/http1", "hyper-rustls?/http1"]
 http2 = ["hyper-util/http2", "hyper-rustls?/http2"]
 native-tls = ["dep:hyper-tls"]
-rustls-tls = ["dep:hyper-rustls", "hyper-rustls?/rustls-native-certs"]
+rustls-tls = ["dep:hyper-rustls", "dep:rustls", "hyper-rustls?/rustls-native-certs"]
 svix_beta = []
 
 [dependencies]
@@ -32,14 +37,15 @@ hmac-sha256 = "1"
 http02 = { package = "http", version = "0.2.0" }
 http1 = { package = "http", version = "1.0.0" }
 http-body-util = "0.1.0"
-hyper = "1.1.0"
-hyper-rustls = { version = "0.26.0", optional = true }
+hyper = "1.7.0"
+hyper-rustls = { version = "0.27.7", optional = true }
 hyper-tls = { version = "0.6.0", optional = true }
 hyper-util = { version = "0.1.16", features = ["client", "client-legacy", "tokio"] }
 itertools = "0.14.0"
 js_option = "0.1.1"
 percent-encoding = "2.3.1"
 rand = "0.9.0"
+rustls = { version = "0.23.31", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
