ts: Replace eslint with `biome`

--- a/.github/workflows/javascript-lint.yml
+++ b/.github/workflows/javascript-lint.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Lint
         run: |
           cd javascript
-          yarn run lint
+          yarn run check
 
       - name: Test
         run: |
