ts[biome]: Fix `lint/suspicious/noImplicitAnyLet`

--- a/javascript/biome.jsonc
+++ b/javascript/biome.jsonc
@@ -28,9 +28,7 @@
                 // needs codegen fix
                 "noExplicitAny": "off",
                 // needs codegen fix
-                "noEmptyInterface": "off",
-                // needs codegen fix
-                "noImplicitAnyLet": "off"
+                "noEmptyInterface": "off"
             }
         }
     },
