ts[biome]: Fix(ignore) `lint/suspicious/noEmptyInterface`

--- a/javascript/biome.jsonc
+++ b/javascript/biome.jsonc
@@ -26,9 +26,7 @@
             },
             "suspicious": {
                 // needs codegen fix
-                "noExplicitAny": "off",
-                // needs codegen fix
-                "noEmptyInterface": "off"
+                "noExplicitAny": "off"
             }
         }
     },
