python: Generate the Svix(Async) client

--- a/codegen/codegen.toml
+++ b/codegen/codegen.toml
@@ -61,6 +61,9 @@ output_dir = "python/svix/models"
 [[python.task]]
 template = "templates/python/api_summary.py.jinja"
 output_dir = "python/svix/api"
+[[python.task]]
+template = "templates/python/summary.py.jinja"
+output_dir = "python/svix/api"
 
 
 [ruby]
