Rename svix-server_derive -> svix-server-derive

--- a/server/svix-server-derive/Cargo.toml
+++ b/server/svix-server-derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "svix-server_derive"
+name = "svix-server-derive"
 publish = false
 version.workspace = true
 edition.workspace = true
