--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["svix-server", "svix-server_derive"]
+members = ["svix-server", "svix-server-derive"]
 resolver = "2"
 
 [workspace.lints.rust]
@@ -30,7 +30,7 @@ build-override.opt-level = 2
 [profile.dev.package]
 # not worth optimizing, much more likely to change than other host deps
 # and not cached in CI.
-svix-server_derive = { opt-level = 0 }
+svix-server-derive = { opt-level = 0 }
 
 [patch.crates-io]
 hyper = { git = "https://github.com/svix/hyper.git", rev = "18c04c321e1a9a4958ad14b880f7403acbe1c914" }
