--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "generate": "python3 ./regen_openapi.py"
   },
   "devDependencies": {
-    "axios": "^0.30.0",
-    "openapi-to-postmanv2": "^3.1.0",
+    "axios": "^1.0",
+    "openapi-to-postmanv2": "^5.4.1",
     "semver": "^7.5.2"
+  },
+  "resolutions": {
+     "js-yaml": "4.1.1"
   }
 }
