--- a/javascript/package.json
+++ b/javascript/package.json
@@ -20,7 +20,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "prepare": "yarn run build",
+    "prepare": "npm run build",
     "test": "tsc -p tsconfig.test.json && node --enable-source-maps test_build/src/index.test.js",
     "prepublishOnly": "biome check",
     "check": "biome check",
