--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,19 +5,25 @@ annotated-types==0.7.0
 anyio==4.10.0
     # via httpx
 attrs==25.3.0
-    # via svix (setup.py)
+    # via
+    #   svix (setup.py)
+    #   standardwebhooks
 certifi==2025.8.3
     # via
     #   httpcore
     #   httpx
 deprecated==1.2.18
-    # via svix (setup.py)
+    # via
+    #   svix (setup.py)
+    #   standardwebhooks
 h11==0.16.0
     # via httpcore
 httpcore==1.0.9
     # via httpx
 httpx==0.28.1
-    # via svix (setup.py)
+    # via
+    #   svix (setup.py)
+    #   standardwebhooks
 idna==3.10
     # via
     #   anyio
@@ -27,15 +33,23 @@ pydantic==2.11.7
 pydantic-core==2.33.2
     # via pydantic
 python-dateutil==2.9.0.post0
-    # via svix (setup.py)
+    # via
+    #   svix (setup.py)
+    #   standardwebhooks
 six==1.17.0
     # via python-dateutil
 sniffio==1.3.1
     # via anyio
+standardwebhooks==1.0.0
+    # via svix (setup.py)
 types-deprecated==1.2.15.20250304
-    # via svix (setup.py)
+    # via
+    #   svix (setup.py)
+    #   standardwebhooks
 types-python-dateutil==2.9.0.20250809
-    # via svix (setup.py)
+    # via
+    #   svix (setup.py)
+    #   standardwebhooks
 typing-extensions==4.14.1
     # via
     #   anyio
