--- a/javascript/package.json
+++ b/javascript/package.json
@@ -28,14 +28,13 @@
     "fmt": "biome format --write"
   },
   "dependencies": {
-    "@stablelib/base64": "^1.0.0",
-    "fast-sha256": "^1.3.0",
+    "standardwebhooks": "1.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.7.5",
     "@biomejs/biome": "2.2.4",
     "@stablelib/utf8": "^2.0.0",
+    "@types/node": "^22.7.5",
     "@types/uuid": "^10.0.0",
     "mockttp": "^3.15.5",
     "typescript": "^4.0"
